--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: 필수 패키지 설치
+      run: sudo apt-get update && sudo apt-get install -y autoconf automake libtool
     - name: configure
       run: ./configure
     - name: make
