--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,4 @@
 bin_PROGRAMS = socket_server
-socket_server_SOURCES = main.cpp socket_server.cpp
+socket_server_SOURCES = socket_server.cpp main.cpp
+nobase_include_HEADERS = socket_server.h
 AUTOMAKE_OPTIONS = foreign
