make src directory

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS = socket_server
-socket_server_SOURCES = socket_server.cpp main.cpp
-nobase_include_HEADERS = socket_server.h
+socket_server_SOURCES = src/main.cpp src/socket_server.cpp
+nobase_include_HEADERS = src/socket_server.h
 AUTOMAKE_OPTIONS = foreign
