--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,10 @@
 AC_INIT([cpp_socket_server], [1.0], [jibum.jung@gmail.com])
 AM_INIT_AUTOMAKE
+
+# C++ 컴파일러 확인
 AC_PROG_CXX
+
+# Makefile 추가
 AC_CONFIG_FILES([Makefile])
+
 AC_OUTPUT
